--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "v1",
-    "@metaplex-foundation/js": "^0.17.5",
+    "@metaplex-foundation/js": "^0.17.12",
+    "@particle-network/auth": "^1.3.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@solana/wallet-adapter-base": "^0.9.23",
-    "@solana/wallet-adapter-react": "^0.15.35",
-    "@solana/wallet-adapter-react-ui": "^0.9.34",
-    "@solana/wallet-adapter-wallets": "^0.19.25",
-    "@solana/web3.js": "^1.89.1",
+    "@solana/wallet-adapter-base": "^0.9.18",
+    "@solana/wallet-adapter-react": "^0.15.24",
+    "@solana/wallet-adapter-react-ui": "^0.9.22",
+    "@solana/wallet-adapter-wallets": "^0.19.5",
+    "@solana/web3.js": "^1.66.2",
     "bigint-buffer": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "next": "14.1.0",
+    "next": "14.0.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18",
